# kescher

./: .gitignore  Makefile  README.rst  journal.csv  pyproject.toml  pytest.ini
.circleci/: config.yml
.github/workflows/: kescher_tests_and_checks.yml
docs/: conf.py  design.rst  index.rst  installation.rst  kescher.rst  kescher.tests.rst  quick_tour.rst  quickstart.rst
docs/source/: kescher.rst  kescher.tests.rst  modules.rst
kescher/: __init__.py  booking.py  cli.py  database.py  filters.py  helpers.py  importers.py  logging.py  models.py  sanitizers.py  show.py
kescher/tests/: conftest.py  test_cli.py  test_helpers.py  test_sanitizers.py
kescher/tests/fixtures/: accounts.yaml
kescher/tests/fixtures/invoices_flat/: 1003.2019.Q1.yaml  1003.2019.Q2.yaml
kescher/tests/fixtures/invoices_nested/1000/: 1000.2019.Q3.yaml  1000.2019.Q4.yaml
kescher/tests/fixtures/invoices_nested/1003/: 1003.2019.Q2.yaml  1003.2019.Q3.yaml  1003.2019.Q4.yaml
kescher/tests/fixtures/sanitizers/: Umsatzauskunft_KtoNr01234567890_03-01-2020_17-18-19.csv  Umsatzauskunft_sanitized_master.csv
