[tool.poetry]
name = "kescher"
version = "0.1.0"
description = "kescher is a simple accounting tool"
authors = ["olf42 <olf@subsignal.org>"]
license = "GPL-3.0-only"

[tool.poetry.scripts]
kescher = 'kescher.cli:cli'
sanitize_postbank = 'kescher.sanitizers:sanitize_postbank'

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"
peewee = "^3.13.1"
tqdm = "^4.42.1"
arrow = "^0.15.5"
pyyaml = "^5.3"
"pdfminer.six" = "^20200124"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
